📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10430,5 +10430,117 @@
         "published": "Fri, 12 Dec 2025 13:23:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46243883\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/zevo-wants-to-add-robotaxis-to-its-car-share-fleet-starting-with-newcomer-tensor/",
+        "title": "Zevo wants to add robotaxis to its car-share fleet, starting with newcomer Tensor",
+        "link": "https://techcrunch.com/2025/12/12/zevo-wants-to-add-robotaxis-to-its-car-share-fleet-starting-with-newcomer-tensor/",
+        "published": "Fri, 12 Dec 2025 14:52:19 +0000",
+        "source": "TechCrunch",
+        "summary": "As robotaxi adoption continues, wild ideas like personal ownership and renting them out are starting to pop up again."
+    },
+    {
+        "id": "https://www.theverge.com/column/843420/optimizer-fitness-ai-coaching-plans-quitting-runna-peloton-iq-fitbit-ai",
+        "title": "I quit all my AI fitness plans, and I feel free",
+        "link": "https://www.theverge.com/column/843420/optimizer-fitness-ai-coaching-plans-quitting-runna-peloton-iq-fitbit-ai",
+        "published": "2025-12-12T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "This is Optimizer, a weekly newsletter sent every Friday from Verge senior reviewer Victoria Song that dissects and discusses the latest phones, smartwatches, apps, and other gizmos that swear they're going to change your life. Optimizer arrives in our subscribers' inboxes at 10AM ET. Opt in for Optimizer here. This time last year, I'd cut [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/843447/ai-music-country-suno-vergecast",
+        "title": "How to vibe-write a country hit",
+        "link": "https://www.theverge.com/podcast/843447/ai-music-country-suno-vergecast",
+        "published": "2025-12-12T09:23:18-05:00",
+        "source": "The Verge",
+        "summary": "You may not even know it, but you've almost certainly encountered songs made mostly or even entirely with AI. If you've scrolled on TikTok the last few weeks, you've probably heard \"I Run\" a few times, but there are countless others making their way around social and music platforms. AI tools in general, and Suno [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-age-tech/",
+        "title": "The Best Age-Tech Gadgets Tried and Tested by WIRED",
+        "link": "https://www.wired.com/gallery/best-age-tech/",
+        "published": "Fri, 12 Dec 2025 15:00:00 +0000",
+        "source": "WIRED",
+        "summary": "As more and more age tech hits the market, I\u2019ve been testing the most innovative gadgets for older folks and caregivers."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/reddit-sues-australia-over-underage-social-media-ban-143018208.html?src=rss",
+        "title": "Reddit sues Australia over underage social media ban",
+        "link": "https://www.engadget.com/social-media/reddit-sues-australia-over-underage-social-media-ban-143018208.html?src=rss",
+        "published": "Fri, 12 Dec 2025 14:30:18 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Reddit has filed a lawsuit in Australia's High Court aiming to overturn the country's <a href=\"https://www.engadget.com/social-media/australia-is-adding-twitch-to-its-social-media-ban-for-children-202033276.html\">under-16 social media ban</a>, <a href=\"https://www.reuters.com/legal/litigation/reddit-files-lawsuit-against-australias-social-media-ban-2025-12-11/\"><em>Reuters</em></a> reported. The forum platform called the law contrary to Australia's constitution as it intrudes on free politica"
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-apple-watch-series-11-is-100-off-and-cheaper-than-ever-130006005.html?src=rss",
+        "title": "The Apple Watch Series 11 is $100 off and cheaper than ever",
+        "link": "https://www.engadget.com/deals/the-apple-watch-series-11-is-100-off-and-cheaper-than-ever-130006005.html?src=rss",
+        "published": "Fri, 12 Dec 2025 14:22:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're still on the hunt for gifts, or simply good holiday deals for yourself, you can find them on the internet. Just because Black Friday and Cyber Monday have ended doesn't mean the deals have dried up. One of the best deals available that we're tracking is on the latest <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQF9ZX7P&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=ce953114-327"
+    },
+    {
+        "id": "https://gizmodo.com/pluribus-season-7-recap-carol-manousos-2000698817",
+        "title": "The New \u2018Pluribus\u2019 Traces 2 Equally Harrowing Journeys",
+        "link": "https://gizmodo.com/pluribus-season-7-recap-carol-manousos-2000698817",
+        "published": "Fri, 12 Dec 2025 14:30:16 +0000",
+        "source": "Gizmodo",
+        "summary": "As Manousos embarks on an exhausting road trip, Carol winds her way through a more existential voyage."
+    },
+    {
+        "id": "https://gizmodo.com/star-trek-starfleet-academy-paul-giamatti-villain-2000698734",
+        "title": "Paul Giamatti Teases His \u2018Mean to the Kids\u2019 Villain in \u2018Star Trek: Starfleet Academy\u2019",
+        "link": "https://gizmodo.com/star-trek-starfleet-academy-paul-giamatti-villain-2000698734",
+        "published": "Fri, 12 Dec 2025 13:00:14 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, we might know when to expect 'Black Panther 3'."
+    },
+    {
+        "id": "https://mashable.com/article/apple-airtag-upgrade-leak",
+        "title": "Apples AirTag might get improved location tracking soon",
+        "link": "https://mashable.com/article/apple-airtag-upgrade-leak",
+        "published": "Fri, 12 Dec 2025 15:00:23 +0000",
+        "source": "Mashable",
+        "summary": "A new leak indicates that Apple is launching an improved version of AirTag soon."
+    },
+    {
+        "id": "https://readwrite.com/cftc-no-action-letters-give-prediction-markets-narrow-wiggle-room-on-reporting/",
+        "title": "CFTC issues no-action letters to four prediction markets",
+        "link": "https://readwrite.com/cftc-no-action-letters-give-prediction-markets-narrow-wiggle-room-on-reporting/",
+        "published": "Fri, 12 Dec 2025 14:23:33 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"CFTC issues no-action letters to four prediction markets. Commodity Futures Trading Commission seal featuring an eagle holding scales, established 1975.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/CFTC-no-action-letters-give-prediction-markets-narrow-wiggle-room-on-reporting-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Commodities Futures Trading Commis"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-is-part-of-linux-plumbing-developers/",
+        "title": "AI is already part of Linux's plumbing - whether developers like it or not",
+        "link": "https://www.zdnet.com/article/ai-is-part-of-linux-plumbing-developers/",
+        "published": "Fri, 12 Dec 2025 14:58:46 GMT",
+        "source": "Latest news",
+        "summary": "AI is quietly doing some of Linux's dirtiest work, but not everyone is comfortable with it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-roku-tv-cache/",
+        "title": "How to clear your Roku TV cache (and make the system run like new again)",
+        "link": "https://www.zdnet.com/article/how-to-clear-roku-tv-cache/",
+        "published": "Fri, 12 Dec 2025 14:58:00 GMT",
+        "source": "Latest news",
+        "summary": "Too much cached data can make your Roku system lag and stutter. Here's how to quickly put an end to it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/hoto-pixeldrive-electric-screwdriver-review/",
+        "title": "My favorite electric screwdriver just got replaced - and the upgrade is somehow cheaper",
+        "link": "https://www.zdnet.com/article/hoto-pixeldrive-electric-screwdriver-review/",
+        "published": "Fri, 12 Dec 2025 14:44:00 GMT",
+        "source": "Latest news",
+        "summary": "The Hoto PixelDrive cordless electric screwdriver boasts impressive torque, clever design features, and a delightful price."
+    },
+    {
+        "id": "https://www.dbpro.app/blog/sqlite-json-virtual-columns-indexing",
+        "title": "SQLite JSON at Full Index Speed Using Generated Columns",
+        "link": "https://www.dbpro.app/blog/sqlite-json-virtual-columns-indexing",
+        "published": "Fri, 12 Dec 2025 13:25:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46243904\">Comments</a>"
     }
 ]
