📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10542,5 +10542,141 @@
         "published": "Fri, 12 Dec 2025 13:25:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46243904\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/flaw-in-photo-booth-makers-website-exposes-customers-pictures/",
+        "title": "Flaw in photo booth maker\u2019s website exposes customers\u2019 pictures",
+        "link": "https://techcrunch.com/2025/12/12/flaw-in-photo-booth-makers-website-exposes-customers-pictures/",
+        "published": "Fri, 12 Dec 2025 15:37:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Hama Film makes photo booths that upload pictures and videos online. But their backend systems have a simple flaw that allows anyone to download customer pictures."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/843459/game-awards-playstation-nintendo-pc-games-deal-sale",
+        "title": "Many games from The Game Awards are now on sale",
+        "link": "https://www.theverge.com/gadgets/843459/game-awards-playstation-nintendo-pc-games-deal-sale",
+        "published": "2025-12-12T10:45:00-05:00",
+        "source": "The Verge",
+        "summary": "Amazon is continuing to celebrate The Game Awards, which took place on December 11th, with a big sale on titles that were nominated in their respective categories. The deals include a discount that brings the PC version of Clair Obscur: Expedition 33, which ended up taking home nine awards (including game of the year), back [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/843498/trump-phone",
+        "title": "We&#8217;re still talking about the Trump phone",
+        "link": "https://www.theverge.com/gadgets/843498/trump-phone",
+        "published": "2025-12-12T10:39:28-05:00",
+        "source": "The Verge",
+        "summary": "Every week at The Verge, we&#8217;re tracking what&#8217;s happening with Trump Mobile&#8217;s promised and yet undelivered Android phone. Why? Because we cover phones. We also cover vaporware, which the T1 Phone 8002 (gold version) very well may be. The smartphone has now been delayed for months. Trump Mobile no longer claims that it will be [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/karen-hao-empire-of-ai-water-use-statistics/",
+        "title": "You\u2019re Thinking About AI and Water All Wrong",
+        "link": "https://www.wired.com/story/karen-hao-empire-of-ai-water-use-statistics/",
+        "published": "Fri, 12 Dec 2025 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Fears about AI data centers\u2019 water use have exploded. Experts say the reality is far more complicated than people think."
+    },
+    {
+        "id": "https://www.engadget.com/computing/the-best-tech-gifts-and-cool-gadgets-for-2025-140052697.html?src=rss",
+        "title": "The best tech gifts and cool gadgets for 2025",
+        "link": "https://www.engadget.com/computing/the-best-tech-gifts-and-cool-gadgets-for-2025-140052697.html?src=rss",
+        "published": "Fri, 12 Dec 2025 16:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Engadget staffers spend the entire year poking, prodding and otherwise testing the latest tech gadgets. So we\u2019ve got a pretty good handle on what\u2019s unique and interesting right now. We put together this list for anyone looking for a good gift for that tech-obsessed person on their gift list. Some of these are devices we\u2019ve tested for our reviews and guides, others are items we bought for ourselves (or wish someone would buy for us). We\u2019ve got more than 35 picks here, from nearly every member "
+    },
+    {
+        "id": "https://gizmodo.com/street-fighter-movie-posters-costumes-ranked-2000699012",
+        "title": "Meet the World Warriors of the New \u2018Street Fighter\u2019 Movie In These Wild Posters",
+        "link": "https://gizmodo.com/street-fighter-movie-posters-costumes-ranked-2000699012",
+        "published": "Fri, 12 Dec 2025 16:08:46 +0000",
+        "source": "Gizmodo",
+        "summary": "Let's run through which actors nailed cosplaying Capcom's iconic fighters and which missed the mark entirely."
+    },
+    {
+        "id": "https://gizmodo.com/amazon-download-ebooks-publishers-2000699064",
+        "title": "Amazon Plans to Sometimes, in Some Cases, Let You Download Your E-books Again",
+        "link": "https://gizmodo.com/amazon-download-ebooks-publishers-2000699064",
+        "published": "Fri, 12 Dec 2025 16:01:41 +0000",
+        "source": "Gizmodo",
+        "summary": "Maybe we can finally own the e-books we buy."
+    },
+    {
+        "id": "https://gizmodo.com/is-the-dracula-land-theme-park-for-real-2000698557",
+        "title": "Is the Dracula Land Theme Park for Real?",
+        "link": "https://gizmodo.com/is-the-dracula-land-theme-park-for-real-2000698557",
+        "published": "Fri, 12 Dec 2025 15:30:51 +0000",
+        "source": "Gizmodo",
+        "summary": "Using AI for concept art might be cheap and easy, but it doesn't instill confidence."
+    },
+    {
+        "id": "https://mashable.com/video/euphoria-season-3-hbo-max-2026-trailer-lanterns",
+        "title": "Euphoria Season 3 gives first look in HBO Maxs 2026 trailer",
+        "link": "https://mashable.com/video/euphoria-season-3-hbo-max-2026-trailer-lanterns",
+        "published": "Fri, 12 Dec 2025 15:32:25 +0000",
+        "source": "Mashable",
+        "summary": "A sizzle reel for HBO and HBO Max's 2026 slate showcases anticipated series like \"Euphoria,\" \"Lanterns,\" and \"House of the Dragon.\""
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-lego-christmas-table-decoration-deal",
+        "title": "Get festive with a Lego Christmas Table Decoration building set for its lowest price yet",
+        "link": "https://mashable.com/article/dec-12-lego-christmas-table-decoration-deal",
+        "published": "Fri, 12 Dec 2025 15:31:39 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 12, get a Lego Christmas Table Decoration building set for its lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-samsung-27-inch-odyssey-g6-gaming-monitor-deal",
+        "title": "The Samsung 27-inch Odyssey OLED G6 just hit a new record-low price",
+        "link": "https://mashable.com/article/dec-12-samsung-27-inch-odyssey-g6-gaming-monitor-deal",
+        "published": "Fri, 12 Dec 2025 15:20:08 +0000",
+        "source": "Mashable",
+        "summary": "The world's fastest OLED monitor is $300 off at Amazon. Get it for $697.49, down from $999.99."
+    },
+    {
+        "id": "https://readwrite.com/louisiana-gambling-watchdog-sports-prediction-markets/",
+        "title": "Louisiana gambling watchdog is taking issue with sports prediction markets",
+        "link": "https://readwrite.com/louisiana-gambling-watchdog-sports-prediction-markets/",
+        "published": "Fri, 12 Dec 2025 15:16:00 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Louisiana gambling watchdog is taking issue with sports prediction markets. Louisiana Gaming Control Board logo featuring the Louisiana state seal on the left and the words \u2018LOUISIANA GAMING CONTROL BOARD\u2019 in white text on a blue and gold gradient background.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/louisiana-gaming-control-board-generic-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15"
+    },
+    {
+        "id": "https://www.zdnet.com/article/tech-friend-gift-guide/",
+        "title": "The 8 gifts I'd give to my cool techie friends this holiday season",
+        "link": "https://www.zdnet.com/article/tech-friend-gift-guide/",
+        "published": "Fri, 12 Dec 2025 16:09:48 GMT",
+        "source": "Latest news",
+        "summary": "Give them tech they'll actually use this year."
+    },
+    {
+        "id": "https://www.zdnet.com/article/back-market-refurbished-iphone-deal/",
+        "title": "Save on refurbished iPhones at Back Market - no trade-in required",
+        "link": "https://www.zdnet.com/article/back-market-refurbished-iphone-deal/",
+        "published": "Fri, 12 Dec 2025 16:01:58 GMT",
+        "source": "Latest news",
+        "summary": "Back Market is offering discounts of up to $500 on refurbished iPhone models, including the iPhone 16 Pro Max and more. And if you have a qualifying trade-in, you can save even more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-b5-77-inch-best-buy-deal/",
+        "title": "You can buy the 77-inch LG B5 OLED for 50% off right now, and I highly recommend it",
+        "link": "https://www.zdnet.com/article/lg-b5-77-inch-best-buy-deal/",
+        "published": "Fri, 12 Dec 2025 16:01:00 GMT",
+        "source": "Latest news",
+        "summary": "The LG B5 is a more budget-friendly OLED TV than the brand's flagship lineup, and right now at Best Buy, you can save even more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/openai-warns-weaponized-ai/",
+        "title": "Weaponized AI risk is 'high,' warns OpenAI - here's the plan to stop it",
+        "link": "https://www.zdnet.com/article/openai-warns-weaponized-ai/",
+        "published": "Fri, 12 Dec 2025 15:47:20 GMT",
+        "source": "Latest news",
+        "summary": "OpenAI is focused on assessing when AI models are sufficiently capable to either help or hinder defenders, and on safeguarding its own models against cybercriminal abuse."
+    },
+    {
+        "id": "https://www.zdnet.com/article/nitecore-carbo-10000-2-review/",
+        "title": "One of the most durable power banks I've traveled with is also one of the slimmest",
+        "link": "https://www.zdnet.com/article/nitecore-carbo-10000-2-review/",
+        "published": "Fri, 12 Dec 2025 15:44:00 GMT",
+        "source": "Latest news",
+        "summary": "The outdoors can be challenging for power banks, but this one by Nitecore is built to withstand the elements."
     }
 ]
